fixed icons spacing

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@ header {
   padding: 0;
   margin-top: 5px;
   width: 22px;
+  margin-left: 4px;
 }
 h1 {
   margin: 0;
